add examples and update readme